--- a/custom.css
+++ b/custom.css
@@ -13,6 +13,16 @@
 
 .about-container { margin-top: 20px; }
 
+.jumbotron { 
+    background: linear-gradient(top, #2EB8B8, #58C6C6);
+    background: -webkit-linear-gradient(top, #29A6A6, #82D4D4);
+    background: -moz-linear-gradient(top, #2EB8B8, #58C6C6);
+    background: -o-linear-gradient(top, #2EB8B8, #58C6C6);
+    color: white;
+}
+
+.jumbotron>
+
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
@@ -57,7 +67,7 @@
 
 .myHeader {
     height: 300px;
-    background: linear-gradient(top, #2F2F70, #5E5BB4);;
+    background: linear-gradient(top, #2F2F70, #5E5BB4);
     background: -webkit-linear-gradient(top, #2F2F70, #5E5BB4);
     background: -moz-linear-gradient(top, #2F2F70, #5E5BB4);
     background: -o-linear-gradient(top, #2F2F70, #5E5BB4);
@@ -90,16 +100,22 @@
 
 #mormon-header {
     height: 300px;
-    background: linear-gradient(top, #FF6600, #FF944D);
+    background: linear-gradient(top, #299EBC, #33C6EB);
     background: -webkit-linear-gradient(top, #299EBC, #33C6EB);
-    background: -moz-linear-gradient(top, #FF6600, #FF944D);
-    background: -o-linear-gradient(top, #FF6600, #FF944D);
+    background: -moz-linear-gradient(top, #299EBC, #33C6EB);
+    background: -o-linear-gradient(top, #299EBC, #33C6EB);
     color: #ffffff;
 }
 
 #lion-active, #lion-active:hover {
-    background: #FF6600;
-    border-color: #FF6600;
+    background: #FF944D;
+    border-color: #FF944D;
+    color: white;
+}
+
+#lionG-active, #lionG-active:hover {
+    background: #FF944D;
+    border-color: #FF944D;
     color: white;
 }
 
@@ -108,3 +124,101 @@
     border-color: #33C6EB;
     color: white;
 }
+
+
+#author-header { margin-top: 20px; }
+
+#author-footer { margin-top: 300px; }
+
+blockquote {
+    border-color: #29A6A6;
+}
+
+/* customize nav bar ***********************************************************/
+.navbar-home {
+    background-color: white;
+    border-radius:0;
+    border-bottom: 1px solid #F1F1F1;
+}
+
+.navbar-home .navbar-nav > li > a {
+    color: #208193;
+}
+
+.navbar-home .navbar-nav > li > a:hover,
+.nav > li > a:focus {
+    text-decoration: none;
+    background-color: #D6F5F5;
+    color:#1A6776;}
+
+
+.navbar-home .navbar-nav > .active > a,
+.navbar-home .navbar-nav > .active > a:hover,
+.navbar-home .navbar-nav > .active > a:focus {
+    color: #1A6776;
+    background-color:#D6F5F5;
+}
+
+.navbar-home .navbar-brand {
+    color:#208193;
+}
+
+/*customize dropdown toggle and menu***********/
+.navbar-home .nav li.dropdown.open > .dropdown-toggle,
+.navbar-home .nav li.dropdown.active > .dropdown-toggle,
+.navbar-home .nav li.dropdown.open.active > .dropdown-toggle {
+    color: #1A6776;
+    background-color: #D6F5F5;
+}
+
+.navbar-home .dropdown-menu li > a { color: #208193;}
+
+.navbar-home .dropdown-menu li > a:hover {
+    color: #1A6776;
+    background-color: #D6F5F5;}
+
+
+/* navbar of phantom.html ***********************/
+
+.navbar-shows {
+    background-color: white;
+    border-radius:0;
+    border-bottom: 1px solid #F1F1F1;
+}
+
+.navbar-shows .navbar-nav > li > a {
+    color: #153D66;
+}
+
+.navbar-shows .navbar-nav > li > a:hover,
+.nav > li > a:focus {
+    text-decoration: none;
+    background-color: white;
+    color:#153D66;}
+
+
+.navbar-shows .navbar-nav > .active > a,
+.navbar-shows .navbar-nav > .active > a:hover,
+.navbar-shows .navbar-nav > .active > a:focus {
+    color: #153D66;
+    background-color: white;
+}
+
+.navbar-shows .navbar-brand {
+    color:#153D66;
+}
+
+.navbar-shows .nav li.dropdown.open > .dropdown-toggle,
+.navbar-shows .nav li.dropdown.active > .dropdown-toggle,
+.navbar-shows .nav li.dropdown.open.active > .dropdown-toggle {
+    color: #153D66;
+    background-color: white;
+}
+
+.navbar-shows .dropdown-menu li > a { color: #153D66;}
+
+.navbar-shows .dropdown-menu li > a:hover {
+    color: #153D66;
+    /*background-color: white;*/
+}
+
